# apps/api/src/modules/customer-auth/dto/verify-otp.dto.ts
@@ -1,0 +1,17 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, Length } from 'class-validator';
+
+export class VerifyOtpDto {
+  @ApiProperty({ example: 'efizion-bath-demo' })
+  @IsString()
+  tenantSlug!: string;
+
+  @ApiProperty({ example: '+5511999999999' })
+  @IsString()
+  phone!: string;
+
+  @ApiProperty({ example: '123456' })
+  @IsString()
+  @Length(4, 8)
+  code!: string;
+}
